<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="162dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/currentTempreture"
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/Temp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_marginEnd="0dp"
                        android:text="@string/City"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure" />

                    <TextView
                        android:id="@+id/WindPower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Wind" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/currentWeather"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/sun"
                    app:srcCompat="@drawable/ic_sun" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DayOne"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/today" />

                <TextView
                    android:id="@+id/FirstTemp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_15_c" />

                <ImageView
                    android:id="@+id/FirstWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/weathertoday"
                    app:srcCompat="@drawable/ic_rain" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DayTwo"
                    android:layout_width="120dp"
                    android:layout_height="74dp"
                    android:text="@string/Tomorow" />

                <TextView
                    android:id="@+id/SecondTemp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_11_c" />

                <ImageView
                    android:id="@+id/Secondweather"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/tomorowweather"
                    app:srcCompat="@drawable/ic_rain" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DayThree"
                    android:layout_width="120dp"
                    android:layout_height="74dp"
                    android:text="@string/_4_july" />

                <TextView
                    android:id="@+id/ThirdTemp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_10_c" />

                <ImageView
                    android:id="@+id/ThirdWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/fourweather"
                    app:srcCompat="@drawable/ic_rain" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DayFour"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_5_july" />

                <TextView
                    android:id="@+id/FourTemp"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_17_c" />

                <ImageView
                    android:id="@+id/FourWeather"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/fithweather"
                    app:srcCompat="@drawable/ic_sun" />
            </LinearLayout>

            <Button
                android:id="@+id/goToWiki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wiki" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>